Fixed Input alignment

--- a/app/assets/stylesheets/components/_typeahead.scss
+++ b/app/assets/stylesheets/components/_typeahead.scss
@@ -24,14 +24,14 @@ input[role="combobox"] {
     .typeahead__innerList {
         padding-left: 10px;
         padding-right: 10px;
-        padding-top: 6px;
+        padding-top: 4px;
         padding-bottom: 6px;
         position: absolute;
         width: 100%;
         max-width: 460px;
         z-index: 1000;
-        margin-top: -5px;
-        border-radius:  0px 0px 12px 12px;
+        margin-top: -40px;
+        border-radius:  0px 0px 8px 8px;
     }
 
     .typeahead__innerItem {
